# Phantom_bot

./: LICENSE  pyproject.toml  requirements.txt  session_name.session
API/: bot_api.txt
CSE sec c/: main.py  which.txt  wsgi.py
Conversation/: conversation-5888166321.txt  conversation-6226239719.txt
Main/: bot.py  download_vodeo.py  main.py  test.py
info/: Group_message_data.txt  admin_help.txt  group-rules.txt  help.txt  ids.txt  rules.txt  user_data.db
memory/: memory-5888166321.txt  memory-6226239719.txt
persona/: memory_persona.txt  sec_c.txt
routine/: routine.json
settings/: user_settings.db
